--- a/views/index.html
+++ b/views/index.html
@@ -58,6 +58,7 @@
                                 <th>Full Name</th>
                                 <th>Address</th>
                                 <th>Email</th>
+                                <th>Memo</th>
                                 <th>Action</th>
                             </tr>
                         </thead>
